--- a/project.uvprojx
+++ b/project.uvprojx
@@ -138,7 +138,7 @@
           </Flash1>
           <bUseTDR>1</bUseTDR>
           <Flash2>BIN\UL2CM3.DLL</Flash2>
-          <Flash3></Flash3>
+          <Flash3>"" ()</Flash3>
           <Flash4></Flash4>
           <pFcarmOut></pFcarmOut>
           <pFcarmGrp></pFcarmGrp>
@@ -475,6 +475,11 @@
               <FileName>elmo.c</FileName>
               <FileType>1</FileType>
               <FilePath>.\USER\SRC\elmo.c</FilePath>
+            </File>
+            <File>
+              <FileName>tim2.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\USER\SRC\tim2.c</FilePath>
             </File>
           </Files>
         </Group>
