--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,11 @@
         "ios": "c",
         "string": "c",
         "xstring": "c"
-    }
+    },
+    "markdownlint.config": {
+        "default": true,
+        "MD033": {
+          "allowed_elements": [ "font", "li", "table", "tr", "td", "center" ]
+        }
+      },
 }
